crates/etch-core/tests/snapshots/corpus_tests__core-blockquotes-basic.snap
---
source: crates/etch-core/tests/corpus_tests.rs
expression: result
---
{
  "document": {
    "frontmatter": null,
    "body": [
      {
        "type": "BlockQuote",
        "content": [
          {
            "type": "Paragraph",
            "content": [
              {
                "type": "Text",
                "value": "The road vanished under the first snow.\nLantern light flickered across the fence posts.\nNobody spoke until the wind settled."
              }
            ]
          }
        ]
      }
    ]
  },
  "errors": []
}
