crates/etch-core/tests/snapshots/corpus_tests__core-blockquotes-nested.snap
---
source: crates/etch-core/tests/corpus_tests.rs
expression: result
---
{
  "document": {
    "frontmatter": null,
    "body": [
      {
        "type": "BlockQuote",
        "content": [
          {
            "type": "Paragraph",
            "content": [
              {
                "type": "Text",
                "value": "Outer voice speaking to the room."
              }
            ]
          },
          {
            "type": "BlockQuote",
            "content": [
              {
                "type": "Paragraph",
                "content": [
                  {
                    "type": "Text",
                    "value": "Inner reply from the back row."
                  }
                ]
              },
              {
                "type": "BlockQuote",
                "content": [
                  {
                    "type": "Paragraph",
                    "content": [
                      {
                        "type": "Text",
                        "value": "A quiet aside beneath both speakers."
                      }
                    ]
                  }
                ]
              },
              {
                "type": "Paragraph",
                "content": [
                  {
                    "type": "Text",
                    "value": "The reply continues after the aside."
                  }
                ]
              }
            ]
          }
        ]
      }
    ]
  },
  "errors": []
}
