crates/etch-core/tests/snapshots/corpus_tests__core-blockquotes-with-attribution.snap
---
source: crates/etch-core/tests/corpus_tests.rs
expression: result
---
{
  "document": {
    "frontmatter": null,
    "body": [
      {
        "type": "BlockQuote",
        "content": [
          {
            "type": "Paragraph",
            "content": [
              {
                "type": "Text",
                "value": "Winter teaches patience better than any sermon.\nThe quiet does half the work for you.\n— Mira Holloway"
              }
            ]
          }
        ]
      }
    ]
  },
  "errors": []
}
