crates/etch-core/tests/snapshots/corpus_tests__core-blockquotes-with-formatting.snap
---
source: crates/etch-core/tests/corpus_tests.rs
expression: result
---
{
  "document": {
    "frontmatter": null,
    "body": [
      {
        "type": "BlockQuote",
        "content": [
          {
            "type": "Paragraph",
            "content": [
              {
                "type": "Text",
                "value": "The guide called the ridge "
              },
              {
                "type": "Strong",
                "content": [
                  {
                    "type": "Text",
                    "value": "safe enough"
                  }
                ]
              },
              {
                "type": "Text",
                "value": " by noon."
              },
              {
                "type": "SoftBreak"
              },
              {
                "type": "Text",
                "value": "She marked the eastern path as "
              },
              {
                "type": "Emphasis",
                "content": [
                  {
                    "type": "Text",
                    "value": "muddy"
                  }
                ]
              },
              {
                "type": "Text",
                "value": " after the storm."
              }
            ]
          },
          {
            "type": "List",
            "ordered": false,
            "items": [
              {
                "content": [
                  {
                    "type": "Paragraph",
                    "content": [
                      {
                        "type": "Text",
                        "value": "Pack an extra scarf"
                      }
                    ]
                  }
                ]
              },
              {
                "content": [
                  {
                    "type": "Paragraph",
                    "content": [
                      {
                        "type": "Text",
                        "value": "Leave the "
                      },
                      {
                        "type": "InlineCode",
                        "value": "radio"
                      },
                      {
                        "type": "Text",
                        "value": " on channel three"
                      }
                    ]
                  }
                ]
              }
            ]
          }
        ]
      }
    ]
  },
  "errors": []
}
