crates/etch-core/tests/snapshots/corpus_tests__core-code-blocks-backticks-inside.snap
---
source: crates/etch-core/tests/corpus_tests.rs
expression: result
---
{
  "document": {
    "frontmatter": null,
    "body": [
      {
        "type": "CodeBlock",
        "content": "Use `etch validate` before publishing.\nThe setting key is `render.mode`.\nSingle ` backticks stay part of the code."
      }
    ]
  },
  "errors": []
}
