crates/etch-core/tests/snapshots/corpus_tests__core-code-blocks-basic.snap
---
source: crates/etch-core/tests/corpus_tests.rs
expression: result
---
{
  "document": {
    "frontmatter": null,
    "body": [
      {
        "type": "CodeBlock",
        "content": "function greet(name) {\n  return \"Hello, \" + name;\n}\nconsole.log(greet(\"Etch\"));"
      }
    ]
  },
  "errors": []
}
