crates/etch-core/tests/snapshots/corpus_tests__core-code-blocks-empty.snap
---
source: crates/etch-core/tests/corpus_tests.rs
expression: result
---
{
  "document": {
    "frontmatter": null,
    "body": [
      {
        "type": "CodeBlock",
        "content": ""
      }
    ]
  },
  "errors": []
}
