crates/etch-core/tests/snapshots/corpus_tests__core-code-blocks-with-etch-inside.snap
---
source: crates/etch-core/tests/corpus_tests.rs
expression: result
---
{
  "document": {
    "frontmatter": null,
    "body": [
      {
        "type": "CodeBlock",
        "content": "status = \"**draft**\"\n:note[remember this]\n{~ hidden in code ~}"
      }
    ]
  },
  "errors": []
}
