crates/etch-core/tests/snapshots/corpus_tests__core-definition-lists-basic.snap
---
source: crates/etch-core/tests/corpus_tests.rs
expression: result
---
{
  "document": {
    "frontmatter": null,
    "body": [
      {
        "type": "DefinitionList",
        "items": [
          {
            "term": [
              {
                "type": "Text",
                "value": "Lantern"
              }
            ],
            "definitions": [
              [
                {
                  "type": "Paragraph",
                  "content": [
                    {
                      "type": "Text",
                      "value": "A portable light used on the trail after sunset."
                    }
                  ]
                }
              ]
            ]
          }
        ]
      }
    ]
  },
  "errors": []
}
